# jcryptogenie

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  crypto_service.ex  mix.exs
assets/: tailwind.config.js
assets/css/: app.css
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: jcryptogenie.ex  jcryptogenie_web.ex
lib/jcryptogenie/: application.ex  cryptodata.ex  mailer.ex
lib/jcryptogenie_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/jcryptogenie_web/components/: chart.ex  core_components.ex  layouts.ex
lib/jcryptogenie_web/components/layouts/: _live_navbar.html.heex  app.html.heex  root.html.heex
lib/jcryptogenie_web/controllers/: error_html.ex  error_json.ex
lib/jcryptogenie_web/live/: config_live.ex  config_live.html.heex  crypto_live.ex  home_live.ex  home_live.html.heex
reactProject/: package-lock.json  package.json
reactProject/public/: index.html
reactProject/src/: App.js
reactProject/src/components/: CryptoGraph.js  HomePage.js  Sidebar.js  gridMarketplace.js  mostProfit.js  settings.js  tradingBot.js  tradingBotSettings.js
reactProject/src/router/: Dashboard.js  Marketplace.js  Settings.js
src/: history.rs  main.rs
test/jcryptogenie_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
test/support/: conn_case.ex
