[package]
name = "jcryptogenie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
ureq = "2.9.6"
anyhow = "1.0.81"
tokio = "1.37.0"
dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
console_error_panic_hook = "0.1.7"
dioxus-web = "0.5.1"
axum = { version = "0.7.5", features = ["ws"] }
dioxus-liveview = { version = "0.5.1", features = ["axum"] }
